# streamlit_prophet

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.Artefact  LICENSE  Makefile  README.md  SECURITY.md  app.yaml  mypy.ini  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: cd.yml  ci.yml
config/: config_readme.toml  config_streamlit.toml
docker/: Dockerfile
docs/: Makefile  conf.py  index.rst  make.bat
lib/dataprep/: clean.py  filter.py  format.py  split.py
lib/evaluation/: metrics.py  preparation.py
lib/exposition/: preparation.py  visualize.py
lib/inputs/: dataprep.py  dataset.py  dates.py  eval.py  params.py
lib/models/: prophet.py  prophet_cv.py
lib/utils/: load.py  logging.py  mapping.py  palette.py  path.py
streamlit_prophet/: __init__.py
streamlit_prophet/app/: __init__.py  dashboard.py
streamlit_prophet/cli/: __main__.py  deploy.py  dialogs.py
streamlit_prophet/config/: config_instructions.toml  config_readme.toml  config_streamlit.toml
streamlit_prophet/lib/dataprep/: clean.py  format.py  split.py
streamlit_prophet/lib/evaluation/: metrics.py  preparation.py
streamlit_prophet/lib/exposition/: expanders.py  export.py  preparation.py  visualize.py
streamlit_prophet/lib/inputs/: dataprep.py  dataset.py  dates.py  eval.py  params.py
streamlit_prophet/lib/models/: preparation.py  prophet.py  prophet_cv.py
streamlit_prophet/lib/utils/: holidays.py  load.py  logging.py  mapping.py  misc.py
streamlit_prophet/render/: dialogs.py
tests/dataprep/: test_clean.py  test_format.py  test_split.py
tests/evaluation/: test_metrics.py  test_preparation.py
tests/inputs/: test_dataprep.py
tests/models/: test_prophet.py
tests/samples/: df.py  dict.py
tests/test_render/: test_dialogs.py
tests/utils/: test_load.py  test_misc.py
