# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "streamlit_prophet"
version = "1.0.0"
description = "Deploy a Streamlit app to train, evaluate and optimize a Prophet forecasting model visually."
readme = "README.md"
authors = [
  "Maxime Lutel <maxime.lutel@artefact.com>"
]
license = "MIT"
repository = "https://github.com/artefactory-global/streamlit_prophet"
homepage = "https://github.com/artefactory-global/streamlit_prophet"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = ["streamlit", "prophet", "forecasting", "time-series", "data-science"]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"streamlit_prophet" = "streamlit_prophet.cli.__main__:app"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4"
importlib_metadata = {version = "^1.6.0", python = "<3.9"}
typer = {extras = ["all"], version = "^0.3.2"}
rich = "^10.1.0"
pandas = "^1.1.5"
numpy = "^1.20.2"
prophet = "1.1.1"
holidays = "^0.14.2"
plotly = "^4.11.0"
streamlit = "1.14.0"
scipy = "^1.6.3"
vacances-scolaires-france = "^0.8.0"
protobuf = "3.20.1"

[tool.poetry.dev-dependencies]
darglint = "^1.8.0"
isort = "^5.8.0"
pyupgrade = "^2.12.0"
black = "^20.8b1"
flake8 = "^3.8.3"
mypy = "^0.812"
bandit = "^1.7.0"
safety = "^1.10.3"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
pylint = "^2.6.0"
pydocstyle = "^6.0.0"
pre-commit = "^2.12.0"
mypy-extensions = "^0.4.3"

[tool.black]
# https://github.com/psf/black
line-length = 100
target-version = ["py38"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 100
